# SummerSchool

./: .gitignore
GateDetector/: CMakeLists.txt  context.h  detection.h  detectiongate.cpp  detectiongate.h  detectionmarkup.cpp  detectionmarkup.h  gate.cpp  gate.h  gobject.h  imageworker.cpp  imageworker.h  main.cpp  markup.cpp  markup.h  utills.cpp  utills.h
day1/: Makefile  testOpenCV.cpp
